# super-fast-API-shop

./: README.md  alembic.ini  pyproject.toml
app/: main.py  schemas.py
app/backend/: db.py  db_depends.py  my.db
app/migrations/: env.py
app/migrations/versions/: 08415ff9f2ed_initial_migration.py
app/models/: __init__.py  base.py  category.py  products.py  review.py  user.py
app/routers/: auth.py  category.py  permission.py  products.py  review.py
